@startuml 信号机制核心结构设计类图

' 设计类图 (Design Class Diagram)
' 展示信号子系统的核心结构、职责边界和主要依赖关系。
' 重点覆盖 SigAction / KSigAction / SigSet / SigInfo /
' SigTable 以及信号帧 (setup_frame / restore_frame)。
skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam classFontStyle bold
skinparam packageStyle rectangle
skinparam shadowing false

enum SigOp <<enumeration>> {
    Terminate
    CoreDump
    Ignore
    Stop
    Continue
}

class SigSet <<bitflags + value object>> {
    {static} + SIGHUP
    {static} + SIGINT
    {static} + SIGQUIT
    {static} + SIGILL
    {static} + SIGTRAP
    {static} + SIGABRT
    {static} + SIGBUS
    {static} + SIGFPE
    {static} + SIGKILL
    {static} + SIGUSR1
    {static} + SIGSEGV
    {static} + SIGUSR2
    {static} + SIGPIPE
    {static} + SIGALRM
    {static} + SIGTERM
    {static} + SIGSTKFLT
    {static} + SIGCHLD
    {static} + SIGCONT
    {static} + SIGSTOP
    {static} + SIGTSTP
    {static} + SIGTTIN
    {static} + SIGTTOU
    {static} + SIGURG
    {static} + SIGXCPU
    {static} + SIGXFSZ
    {static} + SIGVTALRM
    {static} + SIGPROF
    {static} + SIGWINCH
    {static} + SIGIO
    {static} + SIGPWR
    {static} + SIGSYS
    {static} + SIGRTMIN
    {static} + SIGRT_1
    --
    + default_op(): SigOp
    {static} + from_sig(signo): Self
    + peek_front(): Option<usize>
    + contains(other): bool
    + is_empty(): bool
}

class SigActionFlags <<bitflags>> {
    {static} + SA_NOCLDSTOP
    {static} + SA_NOCLDWAIT
    {static} + SA_SIGINFO
    {static} + SA_ONSTACK
    {static} + SA_RESTART
    {static} + SA_NODEFER
    {static} + SA_RESETHAND
    {static} + SA_INTERRUPT
    {static} + SA_RESTORER
}

class SigAction <<repr(C) value object>> {
    + sa_handler: usize
    + sa_flags: SigActionFlags
    + sa_restore: usize
    + sa_mask: SigSet
    --
    {static} + new(signo): Self
}

class KSigAction <<kernel-internal>> {
    + act: SigAction
    + customed: bool
    --
    {static} + new(signo, customed): Self
    {static} + ignore(): Self
}

class SignalStackFlags <<bitflags>> {
    {static} + ONSTACK
    {static} + DISABLE
    {static} + AUTODISARM
}

class SignalStack <<repr(C) value object>> {
    + sp: usize
    + flags: u32
    + size: usize
    --
    {static} + new(sp, size): Self
}

class SigInfo <<repr(C) value object>> {
    - si_signo: u32
    - si_errno: u32
    - si_code: u32
    - si_12: u32
    - si_pid: u32
    - si_uid: u32
    - si_status: u32
    - __pad: [u8; ..]
    --
    {static} + new(si_signo, si_errno, si_code, si_16): Self
    {static} + new_child(si_signo, si_code, pid, status): Self
}

class MachineContext <<arch-specific>> {
    .. riscv64: 32 general-purpose registers ..
    .. loongarch64: 32 GR + PC + CRMD + ... ..
    --
    + sepc / pc: usize
    + sp: usize
    + ra: usize
    + a0..a7: usize
}

class UserContext <<repr(C) value object>> {
    + flags: usize
    + link: usize
    + stack: SignalStack
    + sigmask: SigSet
    + __pad: [u8; 128]
    + mcontext: MachineContext
}

class SigTable {
    + inner: SyncUnsafeCell<SigTableInner>
    --
    {static} + new(): Self
    {static} + from_another(another): Self
    + action(signo): KSigAction
    + set_action(signo, act): void
    + exit_code(): i32
    + is_exited(): bool
    + set_exit_code(exit_code): void
    + get_ref(): &SigTableInner
    + get_mut(): &mut SigTableInner
}

class SigTableInner {
    - actions: [KSigAction; SIG_MAX_NUM + 1]
    - group_exit_code: Option<i32>
    --
    {static} + new(): Self
    {static} + from_another(other): Self
}

class ProcessMeta <<Process 元数据>> {
    + tasks: Vec<Weak<TaskControlBlock>>
    + children: Vec<Weak<Process>>
    + parent_pid: usize
    + pgid: usize
    + child_exit_event: AtomicWaker
    + exit_signal: i32
    + stopped_signal: Option<usize>
    + continued_signal: Option<usize>
    + termination_signal: Option<(usize, bool)>
    + usage: ProcessUsage
}

class Process <<外部>> {
    + sig_table: Arc<Mutex<SigTable>>
    + inner: RwLock<ProcessInner>
    + meta: Mutex<ProcessMeta>
    --
    + get_locked_sigtable(): MutexGuard<SigTable>
}

class TaskControlBlockInner <<per-thread>> {
    + sig_mask: SigSet
    + sig_pending: SigSet
    + sig_eintr: bool
    + sigtimedwait_timedout: bool
    + pdeath_signal: u8
    + trap_cx: TrapContext
    + task_status: TaskStatus
    + timer: Arc<Timer>
    + clear_child_tid: usize
    + vfork_wait_child: usize
    .. other fields omitted ..
}

class TrapContext <<arch-specific>> {
    .. wraps the trap-saved register state ..
    --
    + get_sp(): usize
    + set_sp(sp): void
    + get_sepc(): usize
    + set_sepc(sepc): void
    + get_ra(): usize
    + set_ra(ra): void
    + get_a0()..set_a0(): usize
    + get_a1()..set_a1(): usize
    + get_a2()..set_a2(): usize
    + origin_a0: usize
    + sepc_step(offset): void
    + as_mctx(): MachineContext
    + copy_from_mctx(mctx): void
}

class SigActionHandler <<module: signal/mod.rs>> {
    {static} + handle_signal(signo): void
    {static} + setup_frame(signo, sig_action): void
    {static} + restore_frame(): SyscallRet
    {static} + check_if_any_sig_for_current_task(): Option<usize>
    {static} + add_signal(task, signal): bool
    {static} + send_signal_to_thread_group(pid, sig): Result
    {static} + send_signal_to_thread(tid, sig): void
    {static} + send_signal_to_thread_of_proc(pid, tid, sig): void
    {static} + send_access_signal(self_tid, sig): Result
}

class SyscallSignal <<module: syscall/signal.rs>> {
    {static} + sys_rt_sigaction(signo, act, old_act): SyscallRet
    {static} + sys_rt_sigreturn(): SyscallRet
    {static} + sys_rt_sigprocmask(how, set, old_set): SyscallRet
    {static} + sys_kill(pid, sig): SyscallRet
    {static} + sys_tkill(tid, sig): SyscallRet
    {static} + sys_rt_sigpending(set): SyscallRet
    {static} + sys_rt_sigsuspend(mask): SyscallRet
    {static} + sys_rt_sigtimedwait(set, info, timeout): SyscallRet
}

' =============== 组合 / 聚合关系 ===============

KSigAction *-- SigAction : act
SigAction --> SigActionFlags : sa_flags
SigAction --> SigSet : sa_mask

SigTable *-- SigTableInner : inner
SigTableInner *-- "SIG_MAX_NUM+1" KSigAction : actions

Process o-- SigTable : sig_table\n(Arc<Mutex<>>)
Process *-- ProcessMeta : meta\n(Mutex<>)

TaskControlBlockInner --> SigSet : sig_mask/sig_pending

UserContext *-- SignalStack : stack
UserContext *-- MachineContext : mcontext
UserContext --> SigSet : sigmask
SignalStack --> SignalStackFlags : flags

SigSet ..> SigOp : default_op()

' =============== 依赖 / 调用关系 ===============

SyscallSignal ..> Process : current_task()\n→ process lock
SyscallSignal ..> SigTable : action / set_action
SyscallSignal ..> KSigAction : 构造 SIG_DFL / SIG_IGN / custom

SigActionHandler ..> TaskControlBlockInner : sig_mask / sig_pending / trap_cx
SigActionHandler ..> Process : get_locked_sigtable()
SigActionHandler ..> ProcessMeta : termination_signal / stopped_signal
SigActionHandler ..> KSigAction : action / customed 分支
SigActionHandler ..> TrapContext : 修改 sepc, ra, sp, a0..a2
SigActionHandler ..> MachineContext : 压栈 / 恢复
SigActionHandler ..> UserContext : SA_SIGINFO 路径
SigActionHandler ..> SigInfo : SA_SIGINFO 路径

SyscallSignal ..> SigActionHandler : restore_frame()

' =============== 注释 ===============

note top of KSigAction
  <b>KSigAction</b> 是内核内部表示，在 SigAction 基础上
  附加 <b>customed</b> 布尔标志。
  
  customed == true  ⇔ 用户通过 rt_sigaction 设置了
  非 SIG_DFL / SIG_IGN 的自定义 handler。
  
  handle_signal() 根据此标志二选一：
  · true  → setup_frame() 构建用户态信号帧
  · false → 直接执行默认操作 (Terminate/Ignore/Stop/Continue)
end note

note right of SigTableInner
  actions[0] 对应 signo==0 的特殊槽位 (哨兵)。
  有效信号范围：1..SIG_MAX_NUM (33)。
  SigTable::from_another() 在 fork/clone 时
  浅拷贝父进程的 actions 数组。
end note

note bottom of SigActionHandler
  <b>信号生命周期</b>
  1. sys_kill/tkill/sigqueue  → send_signal_to_*()
    → add_signal() → sig_pending |= sig
  
  2. trap 返回路径 → check_if_any_sig_for_current_task()
    → handle_signal() 处理队首信号
  
  3. customed handler  → setup_frame()
    在用户栈压下 MachineContext/sig_mask/magic
    修改 sepc→handler, ra→trampoline
  
  4. handler 返回 → trampoline 发起 rt_sigreturn
    → restore_frame() 从栈帧恢复全部上下文
end note

note bottom of ProcessMeta
  <b>进程级信号状态</b>
  · termination_signal: 记录导致进程终止的信号号及
    是否 core dump，供 waitid(WNOHANG) 查询
  · stopped_signal: 最近一次 SIGSTOP/SIGTSTP 信号
  · continued_signal: 最近一次 SIGCONT
  · exit_signal: 进程退出时发送给父进程的信号
    (fork→SIGCHLD, clone 可定制)
end note

@enduml
